<resources>

    <string name="app_name" translatable="false">Del</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="tools_item">Аккаунт</string>
    <string name="communicate_item">Контакты</string>
    <string name="accaunt_item" translatable="false"></string>
    <string name="about_item">О нас</string>
    <string name="face_item">Заказы и доставки</string>
    <string name="order_item">Создать заказ</string>
    <string name="get_item">Доставить заказ</string>

    <string-array name="weights_array">
        <item>до 500гр</item>
        <item>до 1кг  </item>
        <item>до 2кг  </item>
        <item>до 5кг  </item>
        <item>до 10кг </item>
    </string-array>

    <string-array name="sort_array">
        <item>по расстоянию</item>
        <item>по оплате</item>
        <item>по весу</item>
        <item>по залогу</item>
    </string-array>

    <string name="text_about_fragment">
        Копырин Максим Викторович\n
        Должность: Генеральный директор\n
        Телефон: 8-919-470-98-10\n
        Личный e-mail: kopyrin.mak@yandex.ru\n\n

        Симакова Алина Робертовна\n
        Должность: Глава отдела IT-разработок, главный бухгалтер\n
        Телефон: 8-909-114-94-14\n
        Личный e-mail: jjmaectro@yandex.ru\n\n

        Полыгалов Денис Андреевич\n
        Должность: Глава PR-отдела\n
        Телефон: 8-952-329-68-10\n\n

        Терлыч Никита Андреевич\n
        Должность: IT-разработчик (front-end)\n
        Телефон: 8-961-754-44-28\n
        Личный e-mail: terlychnikita@gmail.com\n\n

        Сунцев Максим Александрович\n
        Должность: IT-разработчик (back-end)\n
        Телефон: 8-961-754-44-28\n
        Личный e-mail: sunmax1234@mail.ru
    </string>
    <string name="title_activity_login" translatable="false">Del</string>

    <!-- Строки, используемые внутри Activities -->
    <string name="title_activity_signup">Регистрация</string>
    <string name="menu_refresh">Обновить</string>
    <string name="action_settings">Обновить</string>
    <string name="action_logout">Выйти</string>
    <string name="no_orders_available">На данный момент нет активных заказов</string>
    <string name="restore_attempt">Попытка авторегистрации…</string>
    <string name="authorizing">Авторизация…</string>
    <string name="login_failed">Не удалось авторизоваться.</string>
    <string name="input_constraint">от 4 до 20 буквенно-цифровых знаков</string>
    <string name="loading">Загрузка…</string>
    <string name="currency_text">%s руб.</string>
    <string name="check_info_validity">Проверьте правильность введенной информации.</string>
    <string name="creating_account">Создается аккаунт…</string>
    <string name="name_constraint">как минимум 3 знака</string>
    <string name="email_constraint">введите корректный адрес почты</string>
    <string name="password_constraint">введите от 4 до 10 буквенно-цифровых знаков</string>
    <string name="leave_feedback">Оставьте отзыв</string>
    <string name="send">Отправить</string>
    <string name="back">Назад</string>
    <string name="deliveries">Доставки</string>
    <string name="orders">Заказы</string>
    <string name="history">История</string>
    <string name="done">Готово</string>
    <string name="start_an_order">Начните новую доставку!</string>
    <string name="distance">Расстояние:</string>
    <string name="payment">Оплата:</string>
    <string name="name_an_order">Назовите посылку, например, в соответствии с содержимым</string>
    <string name="where_to_take">Откуда взять посылку?</string>
    <string name="where_to_bring">Куда доставить посылку?</string>
    <string name="incorrect_phone">Некорректный номер телефона</string>
    <string name="alredy_have_a_delivery">У вас уже есть активная доставка!</string>
    <string name="accept_an_order">Подтвердите заказ</string>
    <string name="create">Создать</string>
    <string name="grams">%s г</string>

    <!-- Строки, используемые компонентами разметки -->
    <string name="layout_login">Логин</string>
    <string name="layout_password">Пароль</string>
    <string name="layout_sign_in">Войти</string>
    <string name="layout_or_register">… или зарегистрируйтесь</string>
    <string name="layout_e_mail" translatable="false">E-mail</string>
    <string name="layout_name">Имя</string>
    <string name="layout_surname">Фамилия</string>
    <string name="layout_patronym">Отчество</string>
    <string name="layout_phone">Номер телефона</string>
    <string name="layout_about">О себе</string>
    <string name="layout_create_account">Создать аккаунт</string>
    <string name="layout_already_registered">Уже зарегистрированы? Войдите</string>
    <string name="layout_profile">Профиль</string>
    <string name="layout_initials">ФИО</string>
    <string name="layout_sample_number" translatable="false">8 800 555 35 35</string>
    <string name="layout_sample_e_mail" translatable="false">chintan@letsnurture.com</string>
    <string name="layout_sample_money">1500 рублей</string>
    <string name="layout_money">Деньги</string>
    <string name="layout_map">Карта</string>
    <string name="layout_owner_name">Имя владельца</string>
    <string name="layout_card_number">Номер карты</string>
    <string name="layout_card_valid_thru" translatable="false">VALID THRU</string>
    <string name="layout_card_cvv" translatable="false">CVV</string>
    <string name="layout_save_changes">Сохранить изменения</string>
    <string name="layout_passport_serie">Серия</string>
    <string name="layout_passport_number">Номер</string>
    <string name="layout_passport_given_by">Кем выдан</string>
    <string name="layout_passport_given_date">Дата выдачи</string>
    <string name="layout_sender_code">код от получателя</string>
    <string name="layout_feedback">Отзыв</string>
    <string name="layout_ascending">возрастание</string>
    <string name="layout_descending">убывание</string>
    <string name="layout_available_orders">Доступные заказы</string>
    <string name="layout_conditions">Условия заказа</string>
    <string name="layout_describe_an_order">Опишите посылку*</string>
    <string name="layout_how_much_does_it_cost">Сколько стоит груз?*</string>
    <string name="layout_how_much_does_it_weigh">Сколько весит груз?</string>
    <string name="layout_where_to_take">Откуда забрать? (Адрес)*</string>
    <string name="layout_where_to_bring">Куда доставить? (Адрес)*</string>
    <string name="layout_choose_a_day">Выберите день</string>
    <string name="layout_when_to_take">Во сколько забрать</string>
    <string name="layout_when_to_bring">Ко скольким доставить</string>
    <string name="layout_phone_number">Номер телефона*</string>
    <string name="layout_payment">Оплата:</string>
    <string name="layout_create_an_order">Оформить заказ</string>
    <string name="layout_entrance">Подъезд</string>
    <string name="layout_code">Код домофона</string>
    <string name="layout_floor">Этаж</string>
    <string name="layout_room">*Квартира/офис</string>
    <string name="layout_additional_phone_number">Запасной номер</string>

    <!-- Строки заказов -->
    <string name="order_name">Название: %s</string>
    <string name="order_from">Откуда: %s</string>
    <string name="order_to">Куда: %s</string>
    <string name="order_customer">Заказчик: %s</string>
    <string name="order_phone">Номер телефона: %s</string>
    <string name="meters_text">%s м</string>
    <string name="order_cost">Аванс: %s</string>
    <string name="order_weight">Вес: %s</string>
    <string name="order_size">Размер: %s</string>
    <string name="order_code">Код домофона: %s</string>
    <string name="order_entrance">Подъезд:</string>
    <string name="order_floor">Этаж:</string>

    <!-- Строки, используемые в back-end'е -->
    <string name="core_distance_calculated_successfully">Успешно подсчитано расстояние!</string>
    <string name="core_unavailable_to_calculate_distance">Не удалось рассчитать растояние, проверьте правильность адреса.</string>
    <string name="core_order_posted">Заказ оформлен!</string>
    <string name="core_error_posting_an_order">Ошибка при оформлении заказа.</string>
    <string name="core_order_started">Доставка начата!</string>
    <string name="core_error_starting_an_order">Ошибка при начале заказа.</string>
    <string name="core_order_finished">Доставка завершена!</string>
    <string name="core_error_finishing_an_order">Ошибка при завершении заказа.</string>
    <string name="core_created_successfully">Объект успешно создан.</string>
    <string name="core_incorrect_authorization_data">Некорректные данные для авторизации.</string>
    <string name="core_server_problems">Проблемы с сервером.</string>
    <string name="core_incorrect_request">Некорректный запрос.</string>
    <string name="core_sign_up_successful">Регистрация прошла успешно.</string>
    <string name="core_already_taken">Имя пользователя уже занято.</string>
    <string name="core_way_too_many">Слишком много доставок.</string>
    <string name="core_order_busy">Похоже, заказ уже начат.</string>
    <string name="core_ok">Действие успешно.</string>
    <string name="core_error">Произошла ошибка.</string>
    <string name="core_no_data">Отсутствует информация для представления.</string>
    <string name="core_access_error">Ошибка доступа.</string>
    <string name="core_io_error">Ошибка ввода-вывода, возможно, остутствуют один или несколько параметров запроса.</string>
    <string name="core_url_error">Некорректный URL-адрес запроса.</string>
    <string name="core_sync_error">При синхронизации заказов произошла ошибка.</string>
    <string name="core_unknown">Неизвестный код статуса.</string>
    <string name="core_passport_loaded">Паспорт загружен!</string>
    <string name="core_passport_error">При загрузке паспорта произошла ошибка.</string>
    <string name="core_card_loaded">Данные кредитной карточки загружены!</string>
    <string name="core_card_error">При загрузке данных кредитной карточки произошла ошибка.</string>
</resources>
