<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!-- TODO: Update blank fragment layout -->


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/layout_conditions"
            android:textAlignment="center"
            android:textSize="25sp" />

        <!-- Description Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/layout_describe_an_order" />
        </android.support.design.widget.TextInputLayout>

        <!-- Cost Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|number"
                android:hint="@string/layout_how_much_does_it_cost"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Weight -->
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout_how_much_does_it_weigh"
            android:textSize="14sp"/>

        <Spinner
            android:id="@+id/spinner_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <!-- From Labedi -->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/layout_where_to_take" />
        </android.support.design.widget.TextInputLayout>

        <!--  To Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/layout_where_to_bring" />
        </android.support.design.widget.TextInputLayout>

        <!-- the_day Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_choose_a_day"
                android:focusable="false"
                android:clickable="true"/>

        </android.support.design.widget.TextInputLayout>

        <!-- time_take Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_time_take"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_when_to_take"
                android:focusable="false"
                android:clickable="true"
                />
        </android.support.design.widget.TextInputLayout>

        <!-- time_bring Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_time_bring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_when_to_bring"
                android:focusable="false"
                android:clickable="true"/>

        </android.support.design.widget.TextInputLayout>

        <!-- num Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_phone_number"
                android:inputType="text|phone" />
        </android.support.design.widget.TextInputLayout>

        <!--payment Label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:id = "@+id/view_pay"
            android:text = "@string/layout_payment"
            android:fontFamily="sans-serif"
            android:textSize="22sp"
            android:textAlignment="center">
        </TextView>

        <!--  Distance Label -->
        <TextView android:id="@+id/input_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textAlignment="center"
            android:text = "@string/distance"
            />

        <!-- order Button -->
        <Button
            android:id="@+id/btn_order"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            android:fontFamily="sans-serif"
            android:padding="12dp"
            android:text="@string/layout_create_an_order"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textColor="@color/white"/>

        <!-- No need for now -->

        <!-- padik Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone">
            <EditText android:id="@+id/input_padik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/layout_entrance"/>
        </android.support.design.widget.TextInputLayout>

        <!-- code Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone">
            <EditText android:id="@+id/input_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_code"
                android:inputType="text|number"
                android:fontFamily="sans-serif"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <!-- floor Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone">
            <EditText android:id="@+id/input_floor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_floor"
                android:inputType="text|number" />
        </android.support.design.widget.TextInputLayout>

        <!-- ko Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone">
            <EditText android:id="@+id/input_ko"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_room"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <!-- recnum Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone">
            <EditText android:id="@+id/input_recnum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_additional_phone_number"
                android:inputType="text|phone" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</ScrollView>
